kubernetes/apps/platform/photos-config/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photos
  namespace: photos
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.lab.ryantaylor.tech`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: traefik
      services:
        - name: immich-server
          port: 2283
  tls: {}
